<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_catalogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/android_film"
        android:title="@string/item_list_title" />
    <item
        android:id="@+id/bottom_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/round_favorite_24"
        android:title="@string/fav_item_list_title" />
    <item
        android:id="@+id/bottom_userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/round_account_circle_24"
        android:title="@string/user_info_title" />
</menu>