<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreditFragment">

    <TextView
        android:id="@+id/tvCreditTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/credit_title"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:id="@+id/linlayDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreditTittle"
        app:layout_constraintBottom_toTopOf="@+id/linlayLenguaje"
        android:layout_marginTop="50sp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/round_light_mode_24"
            android:contentDescription="@string/img_description_light"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/round_dark_mode_24"
            android:contentDescription="@string/img_description_dark"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linlayLenguaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linlayDarkMode"
        android:layout_marginTop="20sp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLanguajeEN"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/languaje_en"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchLanguaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            />

        <TextView
            android:id="@+id/tvLanguajeES"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/languaje_es"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/linlayLenguaje"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="51dp" />

        <TextView
            android:id="@+id/DescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:text="@string/credit_description"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="72dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnContactar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_contact"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnReturn"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="45dp" />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_return"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="75dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>