<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tv_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_main_welcome"
        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/iv_logo"
        />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@mipmap/ic_launcher_round"

        app:layout_constraintBottom_toTopOf="@+id/et_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Welcome"
        />

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_main_hint"
        android:textSize="20sp"
        android:singleLine="true"
        android:maxLength="50"
        android:contentDescription="logo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"

        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_main_login"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginBottom="25dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>