<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            >

            <ImageView
                android:id="@+id/ivImagen"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/item_image_description"

                />

            <!-- Country -->
            <TextView
                android:id="@+id/tvTitulo1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/Title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvFilmTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivImagen"
                app:layout_constraintTop_toTopOf="@id/ivImagen"
                app:layout_constraintVertical_chainStyle="packed"
                android:fontFamily="@font/cagliostro_regular"
                />

            <TextView
                android:id="@+id/tvFilmTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Dune"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tvTitulo2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivImagen"
                app:layout_constraintTop_toBottomOf="@+id/tvTitulo1"
                app:layout_constraintVertical_chainStyle="packed"
                />

            <!-- Value -->
            <TextView
                android:id="@+id/tvTitulo2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/CompanyTit"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvFilmCompany"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivImagen"
                app:layout_constraintTop_toBottomOf="@id/tvFilmTitle"
                app:layout_constraintVertical_chainStyle="packed"
                android:fontFamily="@font/cagliostro_regular"/>
            <TextView
                android:id="@+id/tvFilmCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="Warner Bros"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tvTitulo3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivImagen"
                app:layout_constraintTop_toBottomOf="@+id/tvTitulo2"
                app:layout_constraintVertical_chainStyle="packed" />

            <!-- Year -->
            <TextView
                android:id="@+id/tvTitulo3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/YearTit"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvFilmYear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivImagen"
                app:layout_constraintTop_toBottomOf="@id/tvFilmCompany"
                app:layout_constraintVertical_chainStyle="packed"
                android:fontFamily="@font/cagliostro_regular"/>
            <TextView
                android:id="@+id/tvFilmYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:text="2021"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/ivImagen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/ivImagen"
                app:layout_constraintTop_toBottomOf="@id/tvTitulo3"
                />

            <CheckBox
                android:id="@+id/cbFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/selector_favourite_item"
                android:theme="@style/favourite_checkbox"
                app:useMaterialThemeColors="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                />

                </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

 </androidx.constraintlayout.widget.ConstraintLayout>